Webflow files merge

--- a/style-guide.html
+++ b/style-guide.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Apr 19 2022 14:43:57 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Apr 27 2022 18:32:07 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6249bc35ec629e3d31ae469a" data-wf-site="6249bc1ba58f8c8228c46fd1">
 <head>
   <meta charset="utf-8">
@@ -33,17 +33,32 @@
       <div class="white"></div>
     </div>
     <div class="div-block">
-      <div id="gh1-b1" class="bay-div">
+      <div id="gh1-b1" class="bay-div selected">
         <h3 class="bay-heading">Bay 1</h3>
       </div>
-      <div id="gh1-b1" class="bay-div selected">
+      <div id="gh1-b1" class="bay-div error">
+        <h3 class="bay-heading">Bay 1</h3>
+      </div>
+      <div id="gh1-b1" class="bay-div error outline">
+        <h3 class="bay-heading">Bay 1</h3>
+      </div>
+      <div id="gh1-b1" class="bay-div in-progress">
+        <h3 class="bay-heading">Bay 1</h3>
+      </div>
+      <div id="gh1-b1" class="bay-div in-progress outline">
         <h3 class="bay-heading">Bay 1</h3>
       </div>
       <div id="gh1-b1" class="bay-div success">
         <h3 class="bay-heading">Bay 1</h3>
       </div>
-      <div id="gh1-b1" class="bay-div error">
+      <div id="gh1-b1" class="bay-div success outline">
         <h3 class="bay-heading">Bay 1</h3>
+      </div>
+      <div id="toggle-div" class="toggle-div admin">
+        <div id="toggle-handle" class="toggle-handle"></div>
+      </div>
+      <div id="office" class="office-div office-select">
+        <h3 class="office-title">Office</h3>
       </div>
     </div>
   </div>
